1999-03-15  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-icon-list.c (gil_destroy): In addition to removing the
	timer, reset the timer_tag variable.

Mon Mar 15 04:48:10 1999  George Lebl  <jirka@5z.com>

	* gnome-icon-list.c: remove timeout when widget is destroyed,
	  the posibility is remote, but still possible

	* gnome-pixmap-entry.c: when entry is destroyed dequeue the entry
	  to be updated in timeout to avert possible crash

1999-03-14  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-app-helper.c: Removed ellipsis from the "New Window" and
	"Close Window" entries, and made their names more descriptive.

1999-03-13  Richard Hult <rhult@hem2.passagen.se>

	* gnome-icon-list.c (icon_event): Ignore button clicks above 3 in
	the button release and button press event handlers.

1999-03-12  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-icon-item.c (iti_paint_text): Nice offset adjustments.

1999-03-09  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-canvas.c (gnome_canvas_item_get_bounds): Un-transform the
	bounding box so that it is returned in the coordinate system of
	the item's parent.

1999-03-09  Owen Taylor  <otaylor@redhat.com>

	* gnome-messagebox.c (gnome_message_box_new): Adjust the
	padding around message boxes for a more attractive
	appearance.

1999-03-09  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-dock-item.c (draw_textured_frame): Actually make use of
	the clip parameter.  No more flicker on repeated exposures of the
	handle.

	* gnome-dock-item.c (gnome_dock_item_paint): Eliminate flicker
	by only painting the handle if the expose area intersects it.

1999-03-09  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-icon-item.c (iti_event): Only start selecting with mouse
	button-1.  This should fix bug #482
	(iti_event): Add check here too (Patch from Richard Hult).

Mon Mar 08 21:55:09 1999  George Lebl  <jirka@5z.com>

	* gnome-icon-sel.c: don't use g_is_image_filename, but use