@@ -24,8 +24,8 @@
 #include "gnome-dialog-util.h"
 #include <gtk/gtk.h>
 
-static GtkWidget * show_ok_box(const gchar * message, const gchar * type,
-			       GtkWindow * parent)
+static GtkWidget *
+show_ok_box(const gchar * message, const gchar * type, GtkWindow * parent)
 {  
   GtkWidget * mbox;
 
@@ -42,37 +42,40 @@ static GtkWidget * show_ok_box(const gchar * message, const gchar * type,
 
 
 /* A little OK box */
-GtkWidget * gnome_ok_dialog      (const gchar * message)
+GtkWidget *
+gnome_ok_dialog (const gchar * message)
 {
   return show_ok_box (message, GNOME_MESSAGE_BOX_INFO, NULL);
 }
 
-GtkWidget * gnome_ok_dialog_parented    (const gchar * message,
-					 GtkWindow * parent)
+GtkWidget *
+gnome_ok_dialog_parented (const gchar * message, GtkWindow * parent)
 {
   return show_ok_box (message, GNOME_MESSAGE_BOX_INFO, parent);
 }
 
 /* Operation failed fatally. In an OK dialog. */
-GtkWidget * gnome_error_dialog   (const gchar * error)
+GtkWidget *
+gnome_error_dialog (const gchar * error)
 {
   return show_ok_box(error, GNOME_MESSAGE_BOX_ERROR, NULL);
 }
 
-GtkWidget * gnome_error_dialog_parented (const gchar * error,
-					 GtkWindow * parent)
+GtkWidget *
+gnome_error_dialog_parented (const gchar * error, GtkWindow * parent)
 {
   return show_ok_box(error, GNOME_MESSAGE_BOX_ERROR, parent);
 }
 
 /* Just a warning. */
-GtkWidget * gnome_warning_dialog (const gchar * warning)
+GtkWidget *
+gnome_warning_dialog (const gchar * warning)
 {
   return show_ok_box(warning, GNOME_MESSAGE_BOX_WARNING, NULL);
 }
 
-GtkWidget * gnome_warning_dialog_parented  (const gchar * warning,
-					    GtkWindow * parent)
+GtkWidget *
+gnome_warning_dialog_parented (const gchar * warning, GtkWindow * parent)
 {
   return show_ok_box(warning, GNOME_MESSAGE_BOX_WARNING, parent);
 }
@@ -84,20 +87,17 @@ typedef struct {
   GtkEntry * entry;
 } callback_info;
 
-static void dialog_reply_callback (GnomeMessageBox * mbox, 
-				   gint button, callback_info* data)
+static void
+dialog_reply_callback (GnomeMessageBox * mbox, gint button, callback_info* data)
 {
   GnomeReplyCallback func = (GnomeReplyCallback) data->function;
   (* func)(button, data->data);
   g_free(data);
 }
  
-static GtkWidget * reply_dialog (const gchar * question,
-				 GnomeReplyCallback callback, 
-				 gpointer data,
-				 gboolean yes_or_ok,
-				 gboolean modal,
-				 GtkWindow * parent)
+static GtkWidget *
+reply_dialog (const gchar * question, GnomeReplyCallback callback, gpointer data,
+	      gboolean yes_or_ok, gboolean modal, GtkWindow * parent)
 {
   GtkWidget * mbox;
   callback_info * info;
@@ -138,72 +138,69 @@ static GtkWidget * reply_dialog (const gchar * question,
 
 
 /* Ask a yes or no question, and call the callback when it's answered. */
-GtkWidget * gnome_question_dialog        (const gchar * question,
-					  GnomeReplyCallback callback, 
-					  gpointer data)
+GtkWidget *
+gnome_question_dialog (const gchar * question,
+		       GnomeReplyCallback callback, gpointer data)
 {
   return reply_dialog(question, callback, data, TRUE, FALSE, NULL);
 }
 
-GtkWidget * gnome_question_dialog_parented        (const gchar * question,
-						   GnomeReplyCallback callback,
-						   gpointer data,
-						   GtkWindow * parent)
+GtkWidget *
+gnome_question_dialog_parented (const gchar * question,
+				GnomeReplyCallback callback, gpointer data,
+				GtkWindow * parent)
 {
   return reply_dialog(question, callback, data, TRUE, FALSE, parent);
 }
 
-
-
-GtkWidget * gnome_question_dialog_modal  (const gchar * question,
-					  GnomeReplyCallback callback, 
-					  gpointer data)
+GtkWidget *
+gnome_question_dialog_modal (const gchar * question, GnomeReplyCallback callback, gpointer data)
 {
   return reply_dialog(question, callback, data, TRUE, TRUE, NULL);
 }
 
-GtkWidget * gnome_question_dialog_modal_parented  (const gchar * question,
-						   GnomeReplyCallback callback,
-						   gpointer data,
-						   GtkWindow * parent)
+GtkWidget *
+gnome_question_dialog_modal_parented (const gchar * question,
+				      GnomeReplyCallback callback, gpointer data,
+				      GtkWindow * parent)
 {
   return reply_dialog(question, callback, data, TRUE, TRUE, parent);
 }
 
 
 /* OK-Cancel question. */
-GtkWidget * gnome_ok_cancel_dialog       (const gchar * message,
-					  GnomeReplyCallback callback, 
-					  gpointer data)
+GtkWidget *
+gnome_ok_cancel_dialog (const gchar * message,
+			GnomeReplyCallback callback, gpointer data)
 {
   return reply_dialog(message, callback, data, FALSE, FALSE, NULL);
 }
 
-GtkWidget * gnome_ok_cancel_dialog_parented       (const gchar * message,
-						   GnomeReplyCallback callback,
-						   gpointer data,
-						   GtkWindow * parent)
+GtkWidget *
+gnome_ok_cancel_dialog_parented (const gchar * message,
+				 GnomeReplyCallback callback, gpointer data,
+				 GtkWindow * parent)
 {
   return reply_dialog(message, callback, data, FALSE, FALSE, parent);
 }
 
-GtkWidget * gnome_ok_cancel_dialog_modal (const gchar * message,
-					  GnomeReplyCallback callback, 
-					  gpointer data)
+GtkWidget *
+gnome_ok_cancel_dialog_modal (const gchar * message,
+			      GnomeReplyCallback callback, gpointer data)
 {
   return reply_dialog(message, callback, data, FALSE, TRUE, NULL);
 }
 
-GtkWidget * gnome_ok_cancel_dialog_modal_parented (const gchar * message,
-						   GnomeReplyCallback callback,
-						   gpointer data,
-						   GtkWindow * parent)
+GtkWidget *
+gnome_ok_cancel_dialog_modal_parented (const gchar * message,
+				       GnomeReplyCallback callback, gpointer data,
+				       GtkWindow * parent)
 {
   return reply_dialog(message, callback, data, FALSE, TRUE, parent);
 }
 
-static void dialog_string_callback (GnomeMessageBox * mbox, gint button, 
-				    callback_info * data)
+static void
+dialog_string_callback (GnomeMessageBox * mbox, gint button, callback_info * data)
 {
   gchar * s = NULL;
   gchar * tmp;
@@ -219,12 +216,11 @@ static void dialog_string_callback (GnomeMessageBox * mbox, gint button,
   g_free(data);
 }
 
-static GtkWidget * request_dialog (const gchar * request, 
-				   const gchar * default_text,
-				   const guint16 max_length,
-				   GnomeStringCallback callback,
-				   gpointer data, gboolean password,
-				   GtkWindow * parent)
+static GtkWidget *
+request_dialog (const gchar * request, const gchar * default_text, const guint16 max_length,
+		GnomeStringCallback callback, gpointer data,
+		gboolean password,
+		GtkWindow * parent)
 {
   GtkWidget * mbox;
   callback_info * info;
@@ -264,6 +260,8 @@ static GtkWidget * request_dialog (const gchar * request,
     gnome_dialog_set_parent(GNOME_DIALOG(mbox),parent);
   }
 
+  gtk_widget_grab_focus (entry);
+
   gtk_widget_show (entry);
   gtk_widget_show (mbox);
   return mbox;
@@ -271,36 +269,35 @@ static GtkWidget * request_dialog (const gchar * request,
 
 
 /* Get a string. */
-GtkWidget * gnome_request_string_dialog  (const gchar * prompt,
-					  GnomeStringCallback callback, 
-					  gpointer data)
+GtkWidget *
+gnome_request_string_dialog  (const gchar * prompt,
+			      GnomeStringCallback callback, gpointer data)
 {
   g_message("gnome_request_string_dialog is deprecated, use gnome_request_dialog instead.");
   return request_dialog (prompt, NULL, 0, callback, data, FALSE, NULL);
 }
 
-GtkWidget * gnome_request_string_dialog_parented  (const gchar * prompt,
-						   GnomeStringCallback callback,
-						   gpointer data,
-						   GtkWindow * parent)
+GtkWidget *
+gnome_request_string_dialog_parented (const gchar * prompt,
+				      GnomeStringCallback callback, gpointer data,
+				      GtkWindow * parent)
 {
   g_message("gnome_request_string_dialog_parented is deprecated, use gnome_request_dialog instead.");
   return request_dialog (prompt, NULL, 0, callback, data, FALSE, parent);
 }
 
 /* Request a string, but don't echo to the screen. */
-GtkWidget * gnome_request_password_dialog (const gchar * prompt,
-					   GnomeStringCallback callback, 
-					   gpointer data)
+GtkWidget *
+gnome_request_password_dialog (const gchar * prompt, GnomeStringCallback callback, gpointer data)
 {
   g_message("gnome_request_password_dialog is deprecated, use gnome_request_dialog instead.");
   return request_dialog (prompt, NULL, 0, callback, data, TRUE, NULL);
 }
 
-GtkWidget * gnome_request_password_dialog_parented(const gchar * prompt,
-						   GnomeStringCallback callback,
-						   gpointer data,
-						   GtkWindow * parent)
+GtkWidget *
+gnome_request_password_dialog_parented (const gchar * prompt,
+					GnomeStringCallback callback, gpointer data,
+					GtkWindow * parent)
 {
   g_message("gnome_request_password_dialog_parented is deprecated, use gnome_request_dialog instead.");
   return request_dialog (prompt, NULL, 0, callback, data, TRUE, parent);
@@ -324,13 +321,11 @@ GtkWidget * gnome_request_password_dialog_parented(const gchar * prompt,
  * Returns:  Pointer to new GNOME dialog object.
  **/
 
-GtkWidget * gnome_request_dialog (gboolean password,
-				  const gchar * prompt,
-				  const gchar * default_text,
-				  const guint16 max_length,
-				  GnomeStringCallback callback, 
-				  gpointer data,
-				  GtkWindow * parent)
+GtkWidget *
+gnome_request_dialog (gboolean password, const gchar * prompt,
+		      const gchar * default_text, const guint16 max_length,
+		      GnomeStringCallback callback, gpointer data,
+		      GtkWindow * parent)
 {
   return request_dialog (prompt, default_text, max_length,
   			 callback, data, password, parent);
